[metadata]
name = zap
description = ZAP (the Zurich Atmosphere Purge) is a high precision sky subtraction tool.
long_description = file: README.rst
author = Kurt Soto, Simon Conseil
author_email = simon.conseil@univ-lyon1.fr
url = https://github.com/musevlt/zap
keywords = astronomy, astrophysics, science, muse, vlt, sky subtraction
license = MIT License
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.5
setup_requires =
    setuptools_scm
install_requires =
    numpy
    scipy
    astropy>=2.0
    scikit-learn

[options.extras_require]
plot = matplotlib

[options.entry_points]
console_scripts =
    zap = zap.__main__:main
